--- a/Flask/finance/templates/register.html
+++ b/Flask/finance/templates/register.html
@@ -13,7 +13,7 @@
             <input class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" name="password_again" placeholder="Password (again)" type="password">
+            <input class="form-control mx-auto w-auto" name="confirmation" placeholder="Password (again)" type="password">
         </div>
         <button class="btn btn-primary" type="submit">Register</button>
     </form>
