--- a/Flask/finance/templates/index.html
+++ b/Flask/finance/templates/index.html
@@ -19,17 +19,17 @@
             <tr>
                 <td class="text-start">{{ purchase.symbol }}</td>
                 <td class="text-end">{{ purchase.shares }}</td>
-                <td class="text-end">{{ purchase.price }}</td>
-                <td class="text-end">{{ purchase.total }}</td>
+                <td class="text-end">{{ purchase.price | usd }}</td>
+                <td class="text-end">{{ purchase.total | usd }}</td>
             </tr>
             {% endfor %}
             <tr>
                 <th class="border-0 fw-bold text-end" colspan="3">Cash</th>
-                <td class=" border-0 text-end">{{ cash }}</td>
+                <td class=" border-0 text-end">{{ cash | usd }}</td>
             </tr>
             <tr>
                 <th class="border-0 fw-bold text-end" colspan="3">TOTAL</th>
-                <td class="border-0 w-bold text-end">{{ total }}</td>
+                <td class="border-0 w-bold text-end">{{ total | usd }}</td>
             </tr>
         </tbody>
     </table>
