--- a/Flask/finance/templates/history.html
+++ b/Flask/finance/templates/history.html
@@ -19,7 +19,7 @@
             <tr>
                 <td class="text-start">{{ transaction.symbol }}</td>
                 <td class="text-end">{{ transaction.shares }}</td>
-                <td class="text-end">{{ transaction.price }}</td>
+                <td class="text-end">{{ transaction.price | usd }}</td>
                 <td class="text-end">{{ transaction.purchase_date }}</td>
             </tr>
             {% endfor %}
