--- a/wiki/encyclopedia/templates/encyclopedia/entry.html
+++ b/wiki/encyclopedia/templates/encyclopedia/entry.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    {{content}}
+    {{content | safe }}
 
+    <a href="{% url 'edit' %}?title={{ title|urlencode }}"><input type="submit" name="" class="btn btn-outline-danger btn-sm" value="Edit"></a>
 {% endblock %}
