--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -6,16 +6,17 @@
         
         <div class="row mx-3">
         {% for list in listing %}
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3 mr-1" style="max-width: 540px;">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="{{ list.imageUrl }}" class="card-img" alt="{{ list.title }}">
+                        <img src="{{ list.imageUrl }}" class="img-fluid rounded-start" alt="{{ list.title }}">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">{{ list.title }}</h5>
                             <p class="card-text"><b>Price: </b>{{ list.price }}</p>
                             <p class="card-text"><small class="text-muted">{{ list.description }}</small></p>
+                            <a href="{% url 'listing' id=list.id %}" class="btn btn-info">Details</a>
                         </div>
                     </div>
                 </div>
@@ -25,6 +26,5 @@
     {% else %}
     
     {% endif %}
-    
 
 {% endblock %}
