--- a/commerce/auctions/templates/auctions/watchlist.html
+++ b/commerce/auctions/templates/auctions/watchlist.html
@@ -13,7 +13,7 @@
             </div>
         </div>     -->
 
-        <div class="card mb-3" style="max-width: 540px;">
+        <div class="card mb-3 mr-1" style="max-width: 540px;">
             <div class="row">
                 <div class="col-md-4">
                     <img src="{{ list.imageUrl }}" class="card-img" alt="{{ list.title }}">
