--- a/commerce/auctions/templates/auctions/create.html
+++ b/commerce/auctions/templates/auctions/create.html
@@ -19,7 +19,7 @@
         </div>
         <div class="form-group">
             <label for="Price">Price</label>
-            <input type="number" name="price" min="0" class="form-control" id="price" placeholder="Price">
+            <input type="number" min="0" name="price" class="form-control" id="price" placeholder="Price" step="0.01">
         </div>
         <label for="Category">Choose a category</label>
         <div class="form-group">
