--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -26,7 +26,7 @@
 <div class="row mx-3">
     {% if user.is_authenticated and listing.isActive %}
         {% if owner %}
-            <form action="{% url 'closeAuction' id=listing.id %}" class="mx-3">
+            <form action="{% url 'closeAuction' id=listing.id %}" class="mr-3">
                 {% csrf_token %}
                 <button class="btn btn-warning btn-sm">Close Auction</button>
             </form>
@@ -62,13 +62,21 @@
         <form action="{% url 'addBid' id=listing.id %}" method="post">
             {% csrf_token %}
             <input type="number" min="0" name="bid" class="form-control" id="bids" placeholder="Bid">
-            <button class="btn btn-primary my-3">Place Bid</button>
+            <button class="btn btn-primary mt-3">Place Bid</button>
         </form>
     </div>
 {% else %}
 
 {% endif %}
 
-<h4>Details</h4> 
+<h4>Details</h4>
+<ul>
+    <li>Listed by {{ listing.owner.username }}</li>
+    {% if listing.category %}
+        <li>Category: {{ listing.category }}</li>
+    {% else %}
+        <li>Category: No Category Listed</li>
+    {% endif %}
+</ul>
 
 {% endblock %}
