--- a/commerce/auctions/templates/auctions/watchlist.html
+++ b/commerce/auctions/templates/auctions/watchlist.html
@@ -23,7 +23,7 @@
                         <h5 class="card-title">{{ list.title }}</h5>
                         <p class="card-text"><b>Price: </b>${{ list.price }}</p>
                         <p class="card-text"><small class="text-muted">{{ list.description }}</small></p>
-                        <a href="{% url 'listing' id=list.id %}" class="btn btn-info">Details</a>
+                        <a href="{% url 'listing' id=list.id %}" class="btn btn-info btn-sm">Details</a>
                     </div>
                 </div>
             </div>
