--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -47,6 +47,9 @@
 
 <div class="container-fluid">
     <h3>Listing: {{ listing.title }}</h3>
+    {% if listingWatchlist %}
+        <img alt="Static Badge" class="mb-2" src="https://img.shields.io/badge/Watchlist-grey">
+    {% endif %} <br>
     <img src="{{ listing.imageUrl }}" alt="{{ listing.title }}" height="200px">
     <p>{{ listing.description }}</p>
     {% if listing.isActive and user == listing.price.user %}
@@ -71,12 +74,32 @@
 
 <h4>Details</h4>
 <ul>
-    <li>Listed by {{ listing.owner.username }}</li>
-    {% if listing.category %}
-        <li>Category: {{ listing.category }}</li>
+<li>Listed by {{ listing.owner.username }}</li>
+{% if listing.category %}
+    <li>Category: {{ listing.category }}</li>
     {% else %}
-        <li>Category: No Category Listed</li>
+    <li>Category: No Category Listed</li>
     {% endif %}
 </ul>
 
+<h4>Comment</h4>
+{% if user.is_authenticated %}
+    <div class="form-group">
+        <form action="{% url 'comment' id=listing.id %}" method="post">
+            {% csrf_token %}
+            <input type="text" name="comment" class="form-control" placeholder="Add Comment" maxlength="100">
+            <button class="btn btn-primary btn mt-3">Submit</button>
+        </form>
+    </div>
+{% endif %}
+
+{% for comment in allComment %}
+    <figure>
+        <figcaption class="blockquote-footer">
+        comment by<cite title="Source Title"> {{ comment.author }}</cite>
+        </figcaption>
+        <p>{{ comment.message }}</p><hr>
+    </figure>
+{% endfor %}
+    
 {% endblock %}
