--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -16,6 +16,7 @@
                             <h5 class="card-title">{{ listing.title }}</h5>
                             <p class="card-text"><b>Price: </b>${{ listing.price }}</p>
                             <p class="card-text"><small class="text-muted">{{ listing.description }}</small></p>
+                            <p class="card-text"><small class="text-muted">Created {{ listing.listed_at }}</small></p>
                             <a href="{% url 'listing' id=listing.id %}" class="btn btn-info btn-sm">Details</a>
                         </div>
                     </div>
