--- a/commerce/auctions/templates/auctions/layout.html
+++ b/commerce/auctions/templates/auctions/layout.html
@@ -25,8 +25,11 @@
                     <a class="nav-link" href="{% url 'categories' %}">Categories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'watchlist' %}">Watchlist <img alt="Static Badge" src="https://img.shields.io/badge/{{ watchlistCount }}-grey">
-                    </a>
+                    {% if watchlistCount == 0 %}
+                        <a class="nav-link" href="{% url 'watchlist' %}">Watchlist</a>
+                    {% else %}
+                        <a class="nav-link" href="{% url 'watchlist' %}">Watchlist <img alt="Static Badge" src="https://img.shields.io/badge/{{ watchlistCount }}-grey"></a>
+                    {% endif %}
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'create' %}">Create Listing</a>
