--- a/commerce/auctions/templates/auctions/categories.html
+++ b/commerce/auctions/templates/auctions/categories.html
@@ -26,6 +26,7 @@
 
 {% if not listings %}
     <h5>No Categories Found</h5>
+    Feel free to create Listing of your choice and add it to the category!😊
 {% else %}
     <div class="row mx-3">
         {% for listing in listings %}
