--- a/commerce/auctions/templates/auctions/index.html
+++ b/commerce/auctions/templates/auctions/index.html
@@ -1,6 +1,11 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
+    {% if not user.is_authenticated %}
+    <div class="text-center">
+        Log In or Register to view or create Active Listings😊
+    </div>
+    {% endif %}
     {% if user.is_authenticated %}
         <h2>Active Listings</h2>
         
