--- a/commerce/auctions/templates/auctions/listing.html
+++ b/commerce/auctions/templates/auctions/listing.html
@@ -50,8 +50,19 @@
     {% if listingWatchlist %}
         <img alt="Static Badge" class="mb-2" src="https://img.shields.io/badge/Watchlist-grey">
     {% endif %} <br>
-    <img src="{{ listing.imageUrl }}" alt="{{ listing.title }}" height="200px">
-    <p>{{ listing.description }}</p>
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="{{ listing.imageUrl }}" class="img-fluid rounded-start" alt="{{ listing.title }}">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <p class="card-text">{{ listing.description }}</p>
+              <p class="card-text"><small class="text-muted">{{ listing.listed_at }}</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
     {% if listing.isActive and user == listing.price.user %}
         <p>{{ countBid }} bid(s) so far. Your bid is the current bid.</p>
     {% else %}
