--- a/note_app/note/templates/note/index.html
+++ b/note_app/note/templates/note/index.html
@@ -39,8 +39,8 @@
                         <h5 class="card-title">{{ content.title }}</h5>
                         <p class="card-text">{{ content.content }}</p>
                         <p class="text-muted"><small class="text-body-secondary">{{ content.created_at }}</small></p>
-                        <button type="button" class="btn btn-secondary btn-sm">Edit</button>
-                        <button type="button" class="btn btn-danger btn-sm">Delete</button>
+                        <a href=""><button type="button" class="btn btn-secondary btn-sm">Edit</button></a>
+                        <a href=""><button type="button" class="btn btn-danger btn-sm">Delete</button></a>
                     </div>
                 </div>
             </div>
